# tt-metal

tools/kernel_generator/: INFRASTRUCTURE_OVERVIEW.md  README.md  config.py  examples.py  generate_diode_equation.py  generate_kernel.py  generate_kernel_clean.py  host_code_generator.py  rag_knowledge_base.py  refinement_engine.py  setup.sh  validator.py
tools/kernel_generator_v2/: .gitignore  PROVIDERS.md  README.md  api_retriever.py  config.py  generate_kernel.py  host_api_retriever.py  host_code_generator.py  ingest.py  iterative_refine.py  (+2 more)
tt_metal/programming_examples/add_2_integers_copy/: CMakeLists.txt  add_2_integers_copy.cpp
tt_metal/programming_examples/diode_equation_single_core_v2_generated/: CMakeLists.txt  diode_equation_single_v2.cpp  original_generation_prompt.md  prompt_debug.md  refinement_iteration_1.md  refinement_iteration_2.md  refinement_iteration_3.md  refinement_iteration_4.md  runtime_output_iteration_1.txt  runtime_output_iteration_2.txt  runtime_output_iteration_4.txt  runtime_output_iteration_5.txt
tt_metal/programming_examples/diode_equation_single_core_v2_generated/kernels/compute/: diode_equation.cpp
tt_metal/programming_examples/diode_equation_single_core_v2_generated/kernels/dataflow/: reader_binary_1_tile.cpp  writer_1_tile.cpp
tt_metal/programming_examples/diode_equation_working/: CMakeLists.txt  GENERATION_LOG.md  diode_equation_single_example.cpp
tt_metal/programming_examples/diode_equation_working/kernels/compute/: diode_equation.cpp
tt_metal/programming_examples/diode_equation_working/kernels/dataflow/: reader_binary_1_tile.cpp  reader_diode.cpp  writer_1_tile.cpp
tt_metal/programming_examples/subtract_multi_core_generated/: CMakeLists.txt  GENERATION_LOG.md  subtract_multi_core_generated.cpp
tt_metal/programming_examples/subtract_multi_core_generated/kernels/compute/: subtract_2_tiles.cpp
tt_metal/programming_examples/subtract_multi_core_generated/kernels/dataflow/: reader_binary_tiles_partitioned.cpp  writer_tiles_partitioned.cpp
(+46 files in other folders)
